
Features
 + #TW-261 Easy to create "not deletable" task (thanks to Jan Kunder).

Bugs
 + #1511 sync init crashes if client certification file is empty or invalid
         (thanks to Marton Suranyi).
 + #1473 Make TASK_RCDIR customizable (thanks to Elias Probst).
 + #1486 Truncated sentence in task-sync(5) manpage (thanks to Jakub Wilk).
 + #1487 `tasksh` segmentation fault (thanks to Hector Arciga).
 + Removed debugging code.

------ current release ---------------------------

2.3.0 (2014-01-15) c4eb46507031b7dee839dcb932bb2a22b2f0d3a2

Features
 + #328 Replaced the 'shell' command with a standalone 'tasksh' binary, which
   includes GNU readline support (thanks to Haitham Gad).
 + #934 support for 'reserved.lines' to accommodate multi-line
   shell prompts when used in conjunction with 'limit:page' (thanks to Robert
   Gill).
 + #1226 A new French translation has begun, and will continue to be a work in
   progress for a while (thanks to YBSA R).
 + #1227 A new 'verify_l10n' utility ensures the localizations are in sync
   (thanks to Wim Schuermann).
 + #1250 Support out-of-tree test runs (thanks to Jakub Wilk).
 + #1256 Supports default values for UDA fields (thanks to Thomas Sullivan).
 + #1297 The task₋sync(5) man pages is rewritten with examples.
 + #1339 The configuration file now supports JSON encoding of Unicode
   characters, by specifying \uNNNN.
 + #1385 Need a way to configure the trust of self-signed certificates.
 + #1423 sync vs. push, pull, merge collision avoidance.
 + #1473 Make TASK_RCDIR customizable (thanks to Jakub Wilk).
 + Stores un-synched transactions in <data.location>/backlog.data.
 + Adds a new 'synchronize' command to sync data with a Taskserver.
 + Adds a new 'initialize' synchronize command argument that uploads all pending
   tasks for first-time initialization.
 + Adds a new 'sync' verbosity token, which will remind when a backlog builds
   up and needs a sync.
 + Supports IPv4 and IPv6 server addresses.