@@ -59,6 +59,7 @@
  * Latest version: http://www.cl.cam.ac.uk/~mgk25/ucs/wcwidth.c
  */
 
+#include <cmake.h>
 #include <wchar.h>
 
 struct interval {
@@ -229,8 +230,12 @@ int mk_wcwidth(wchar_t ucs)
              (ucs >= 0xfe30 && ucs <= 0xfe6f) || /* CJK Compatibility Forms */
              (ucs >= 0xff00 && ucs <= 0xff60) || /* Fullwidth Forms */
              (ucs >= 0xffe0 && ucs <= 0xffe6) ||
+#ifndef CYGWIN
              (ucs >= 0x20000 && ucs <= 0x2fffd) ||
-             (ucs >= 0x30000 && ucs <= 0x3fffd)));
+             (ucs >= 0x30000 && ucs <= 0x3fffd)
+#endif
+            )
+           );
 }
 
 int mk_wcswidth(const wchar_t *pwcs, size_t n)
