@@ -1,6 +1,7 @@
 
 Features
- + #TW-261 Easy to create "not deletable" task (thanks to Jan Kunder).
+ + TW-261 Easy to create "not deletable" task (thanks to Jan Kunder).
+ + TW-278 Cygwin throws warnings building mk_wcwidth() in wcwidth6.c.
 
 Bugs
  + #1511 sync init crashes if client certification file is empty or invalid
